--- a/custom/less/section-leananalytics.less
+++ b/custom/less/section-leananalytics.less
@@ -679,6 +679,11 @@ button.close {
 
   .dropdown-toggle {
     cursor: pointer;
+
+    &:hover,
+    &:focus {
+      text-decoration: none;
+    }
   }
 
   .dropdown-menu-right {
