--- a/custom/less/ui-callout.less
+++ b/custom/less/ui-callout.less
@@ -3,8 +3,9 @@
   margin-top: 0;
   margin-bottom: 20px;
   padding: 20px;
-  border: 1px solid #eee;
-  border-radius: 4px;
+  background: #f9f9f9;
+  border: none;
+  border-left: 6px solid #ccc;
 
   h4 {
     margin-top: 2px;
@@ -59,6 +60,7 @@
 
 .callout-danger {
   color: #e62929;
+  background: #fff4f4;
   border-color: lighten(#e62929, 20%);
 
   a {
@@ -80,17 +82,9 @@
   }
 }
 
-.callout-warning {
-  color: #fffbdb;
-  border-color: #ffedb3;
-
-  h4 {
-    color: #c09853;
-  }
-}
-
 .callout-info {
   color: #008be7;
+  background: #f4faff;
   border-color: lighten(#008be7, 20%);
 
   a {
@@ -115,6 +109,7 @@
 
 .callout-success {
   color: #1aa208;
+  background: #f6fff4;
   border-color: lighten(#1aa208, 12%);
 
   a {
