--- a/custom/less/ui-icon.less
+++ b/custom/less/ui-icon.less
@@ -14,11 +14,11 @@ Sep 16, 2015
 
 @font-face {
   font-family:"ui-icon";
-  src:url("../fonts/ui-icon.eot?6712b5b7543cfaf7856e792a125a95a5");
+  src:url("../fonts/ui-icon.eot?eedb2acc6deda614ea6a12d0edf27071");
   src:url("../fonts/ui-icon.eot?#iefix") format("embedded-opentype"),
-		url("../fonts/ui-icon.woff2?6712b5b7543cfaf7856e792a125a95a5") format("woff2"),
-		url("../fonts/ui-icon.woff?6712b5b7543cfaf7856e792a125a95a5") format("woff"),
-		url("../fonts/ui-icon.svg?6712b5b7543cfaf7856e792a125a95a5#ui-icon") format("svg");
+		url("../fonts/ui-icon.woff2?eedb2acc6deda614ea6a12d0edf27071") format("woff2"),
+		url("../fonts/ui-icon.woff?eedb2acc6deda614ea6a12d0edf27071") format("woff"),
+		url("../fonts/ui-icon.svg?eedb2acc6deda614ea6a12d0edf27071#ui-icon") format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -74,6 +74,7 @@ Sep 16, 2015
 .icon-cloud, 
 .icon-compare, 
 .icon-compose, 
+.icon-console-run, 
 .icon-contact-card, 
 .icon-controller, 
 .icon-credit-card, 
@@ -122,6 +123,7 @@ Sep 16, 2015
 .icon-lock, 
 .icon-locked-on, 
 .icon-locked, 
+.icon-log, 
 .icon-magic, 
 .icon-magnet, 
 .icon-map-location, 
@@ -166,6 +168,7 @@ Sep 16, 2015
 .icon-sms, 
 .icon-stopwatch, 
 .icon-target, 
+.icon-team-bold, 
 .icon-team, 
 .icon-timer, 
 .icon-trash, 
@@ -439,7 +442,7 @@ Sep 16, 2015
 }
 
 
-.icon-contact-card {
+.icon-console-run {
   &:before {
     content:"\f120";
   }
@@ -447,7 +450,7 @@ Sep 16, 2015
 }
 
 
-.icon-controller {
+.icon-contact-card {
   &:before {
     content:"\f121";
   }
@@ -455,7 +458,7 @@ Sep 16, 2015
 }
 
 
-.icon-credit-card {
+.icon-controller {
   &:before {
     content:"\f122";
   }
@@ -463,7 +466,7 @@ Sep 16, 2015
 }
 
 
-.icon-crown {
+.icon-credit-card {
   &:before {
     content:"\f123";
   }
@@ -471,7 +474,7 @@ Sep 16, 2015
 }
 
 
-.icon-danger {
+.icon-crown {
   &:before {
     content:"\f124";
   }
@@ -479,7 +482,7 @@ Sep 16, 2015
 }
 
 
-.icon-dashboard {
+.icon-danger {
   &:before {
     content:"\f125";
   }
@@ -487,7 +490,7 @@ Sep 16, 2015
 }
 
 
-.icon-database-bold {
+.icon-dashboard {
   &:before {
     content:"\f126";
   }
@@ -495,7 +498,7 @@ Sep 16, 2015
 }
 
 
-.icon-devices {
+.icon-database-bold {
   &:before {
     content:"\f127";
   }
@@ -503,7 +506,7 @@ Sep 16, 2015
 }
 
 
-.icon-dollars-bold {
+.icon-devices {
   &:before {
     content:"\f128";
   }
@@ -511,7 +514,7 @@ Sep 16, 2015
 }
 
 
-.icon-download {
+.icon-dollars-bold {
   &:before {
     content:"\f129";
   }
@@ -519,7 +522,7 @@ Sep 16, 2015
 }
 
 
-.icon-edit {
+.icon-download {
   &:before {
     content:"\f12a";
   }
@@ -527,7 +530,7 @@ Sep 16, 2015
 }
 
 
-.icon-envelope-bold {
+.icon-edit {
   &:before {
     content:"\f12b";
   }
@@ -535,7 +538,7 @@ Sep 16, 2015
 }
 
 
-.icon-envelope {
+.icon-envelope-bold {
   &:before {
     content:"\f12c";
   }
@@ -543,7 +546,7 @@ Sep 16, 2015
 }
 
 
-.icon-external {
+.icon-envelope {
   &:before {
     content:"\f12d";
   }
@@ -551,7 +554,7 @@ Sep 16, 2015
 }
 
 
-.icon-factory {
+.icon-external {
   &:before {
     content:"\f12e";
   }
@@ -559,7 +562,7 @@ Sep 16, 2015
 }
 
 
-.icon-filter {
+.icon-factory {
   &:before {
     content:"\f12f";
   }
@@ -567,7 +570,7 @@ Sep 16, 2015
 }
 
 
-.icon-gear-bold {
+.icon-filter {
   &:before {
     content:"\f130";
   }
@@ -575,7 +578,7 @@ Sep 16, 2015
 }
 
 
-.icon-gear {
+.icon-gear-bold {
   &:before {
     content:"\f131";
   }
@@ -583,7 +586,7 @@ Sep 16, 2015
 }
 
 
-.icon-gears {
+.icon-gear {
   &:before {
     content:"\f132";
   }
@@ -591,7 +594,7 @@ Sep 16, 2015
 }
 
 
-.icon-github {
+.icon-gears {
   &:before {
     content:"\f133";
   }
@@ -599,7 +602,7 @@ Sep 16, 2015
 }
 
 
-.icon-globe-alt-2 {
+.icon-github {
   &:before {
     content:"\f134";
   }
@@ -607,7 +610,7 @@ Sep 16, 2015
 }
 
 
-.icon-globe-alt {
+.icon-globe-alt-2 {
   &:before {
     content:"\f135";
   }
@@ -615,7 +618,7 @@ Sep 16, 2015
 }
 
 
-.icon-globe {
+.icon-globe-alt {
   &:before {
     content:"\f136";
   }
@@ -623,7 +626,7 @@ Sep 16, 2015
 }
 
 
-.icon-golf {
+.icon-globe {
   &:before {
     content:"\f137";
   }
@@ -631,7 +634,7 @@ Sep 16, 2015
 }
 
 
-.icon-google-play {
+.icon-golf {
   &:before {
     content:"\f138";
   }
@@ -639,7 +642,7 @@ Sep 16, 2015
 }
 
 
-.icon-graduation {
+.icon-google-play {
   &:before {
     content:"\f139";
   }
@@ -647,7 +650,7 @@ Sep 16, 2015
 }
 
 
-.icon-graph {
+.icon-graduation {
   &:before {
     content:"\f13a";
   }
@@ -655,7 +658,7 @@ Sep 16, 2015
 }
 
 
-.icon-hammer-bold {
+.icon-graph {
   &:before {
     content:"\f13b";
   }
@@ -663,7 +666,7 @@ Sep 16, 2015
 }
 
 
-.icon-heartbeat {
+.icon-hammer-bold {
   &:before {
     content:"\f13c";
   }
@@ -671,7 +674,7 @@ Sep 16, 2015
 }
 
 
-.icon-home-bold {
+.icon-heartbeat {
   &:before {
     content:"\f13d";
   }
@@ -679,7 +682,7 @@ Sep 16, 2015
 }
 
 
-.icon-home {
+.icon-home-bold {
   &:before {
     content:"\f13e";
   }
@@ -687,7 +690,7 @@ Sep 16, 2015
 }
 
 
-.icon-id-card {
+.icon-home {
   &:before {
     content:"\f13f";
   }
@@ -695,7 +698,7 @@ Sep 16, 2015
 }
 
 
-.icon-inbox-empty {
+.icon-id-card {
   &:before {
     content:"\f140";
   }
@@ -703,7 +706,7 @@ Sep 16, 2015
 }
 
 
-.icon-inbox-files-bold {
+.icon-inbox-empty {
   &:before {
     content:"\f141";
   }
@@ -711,7 +714,7 @@ Sep 16, 2015
 }
 
 
-.icon-inbox-files {
+.icon-inbox-files-bold {
   &:before {
     content:"\f142";
   }
@@ -719,7 +722,7 @@ Sep 16, 2015
 }
 
 
-.icon-info {
+.icon-inbox-files {
   &:before {
     content:"\f143";
   }
@@ -727,7 +730,7 @@ Sep 16, 2015
 }
 
 
-.icon-key-bold {
+.icon-info {
   &:before {
     content:"\f144";
   }
@@ -735,7 +738,7 @@ Sep 16, 2015
 }
 
 
-.icon-key {
+.icon-key-bold {
   &:before {
     content:"\f145";
   }
@@ -743,7 +746,7 @@ Sep 16, 2015
 }
 
 
-.icon-keyhole {
+.icon-key {
   &:before {
     content:"\f146";
   }
@@ -751,7 +754,7 @@ Sep 16, 2015
 }
 
 
-.icon-layer-alt {
+.icon-keyhole {
   &:before {
     content:"\f147";
   }
@@ -759,7 +762,7 @@ Sep 16, 2015
 }
 
 
-.icon-layer-bold {
+.icon-layer-alt {
   &:before {
     content:"\f148";
   }
@@ -767,7 +770,7 @@ Sep 16, 2015
 }
 
 
-.icon-lightning {
+.icon-layer-bold {
   &:before {
     content:"\f149";
   }
@@ -775,7 +778,7 @@ Sep 16, 2015
 }
 
 
-.icon-list-selected {
+.icon-lightning {
   &:before {
     content:"\f14a";
   }
@@ -783,7 +786,7 @@ Sep 16, 2015
 }
 
 
-.icon-list {
+.icon-list-selected {
   &:before {
     content:"\f14b";
   }
@@ -791,7 +794,7 @@ Sep 16, 2015
 }
 
 
-.icon-location-arrow {
+.icon-list {
   &:before {
     content:"\f14c";
   }
@@ -799,7 +802,7 @@ Sep 16, 2015
 }
 
 
-.icon-lock {
+.icon-location-arrow {
   &:before {
     content:"\f14d";
   }
@@ -807,7 +810,7 @@ Sep 16, 2015
 }
 
 
-.icon-locked-on {
+.icon-lock {
   &:before {
     content:"\f14e";
   }
@@ -815,7 +818,7 @@ Sep 16, 2015
 }
 
 
-.icon-locked {
+.icon-locked-on {
   &:before {
     content:"\f14f";
   }
@@ -823,7 +826,7 @@ Sep 16, 2015
 }
 
 
-.icon-magic {
+.icon-locked {
   &:before {
     content:"\f150";
   }
@@ -831,7 +834,7 @@ Sep 16, 2015
 }
 
 
-.icon-magnet {
+.icon-log {
   &:before {
     content:"\f151";
   }
@@ -839,7 +842,7 @@ Sep 16, 2015
 }
 
 
-.icon-map-location {
+.icon-magic {
   &:before {
     content:"\f152";
   }
@@ -847,7 +850,7 @@ Sep 16, 2015
 }
 
 
-.icon-megaphone-bold {
+.icon-magnet {
   &:before {
     content:"\f153";
   }
@@ -855,7 +858,7 @@ Sep 16, 2015
 }
 
 
-.icon-mobile {
+.icon-map-location {
   &:before {
     content:"\f154";
   }
@@ -863,7 +866,7 @@ Sep 16, 2015
 }
 
 
-.icon-multi-lang {
+.icon-megaphone-bold {
   &:before {
     content:"\f155";
   }
@@ -871,7 +874,7 @@ Sep 16, 2015
 }
 
 
-.icon-outbound {
+.icon-mobile {
   &:before {
     content:"\f156";
   }
@@ -879,7 +882,7 @@ Sep 16, 2015
 }
 
 
-.icon-package {
+.icon-multi-lang {
   &:before {
     content:"\f157";
   }
@@ -887,7 +890,7 @@ Sep 16, 2015
 }
 
 
-.icon-path {
+.icon-outbound {
   &:before {
     content:"\f158";
   }
@@ -895,7 +898,7 @@ Sep 16, 2015
 }
 
 
-.icon-pen {
+.icon-package {
   &:before {
     content:"\f159";
   }
@@ -903,7 +906,7 @@ Sep 16, 2015
 }
 
 
-.icon-phone-bold {
+.icon-path {
   &:before {
     content:"\f15a";
   }
@@ -911,7 +914,7 @@ Sep 16, 2015
 }
 
 
-.icon-phone {
+.icon-pen {
   &:before {
     content:"\f15b";
   }
@@ -919,7 +922,7 @@ Sep 16, 2015
 }
 
 
-.icon-pie-chart {
+.icon-phone-bold {
   &:before {
     content:"\f15c";
   }
@@ -927,7 +930,7 @@ Sep 16, 2015
 }
 
 
-.icon-piggy-bank {
+.icon-phone {
   &:before {
     content:"\f15d";
   }
@@ -935,7 +938,7 @@ Sep 16, 2015
 }
 
 
-.icon-plan {
+.icon-pie-chart {
   &:before {
     content:"\f15e";
   }
@@ -943,7 +946,7 @@ Sep 16, 2015
 }
 
 
-.icon-plane {
+.icon-piggy-bank {
   &:before {
     content:"\f15f";
   }
@@ -951,7 +954,7 @@ Sep 16, 2015
 }
 
 
-.icon-play-bold {
+.icon-plan {
   &:before {
     content:"\f160";
   }
@@ -959,7 +962,7 @@ Sep 16, 2015
 }
 
 
-.icon-play {
+.icon-plane {
   &:before {
     content:"\f161";
   }
@@ -967,7 +970,7 @@ Sep 16, 2015
 }
 
 
-.icon-plug {
+.icon-play-bold {
   &:before {
     content:"\f162";
   }
@@ -975,7 +978,7 @@ Sep 16, 2015
 }
 
 
-.icon-presentation-bold {
+.icon-play {
   &:before {
     content:"\f163";
   }
@@ -983,7 +986,7 @@ Sep 16, 2015
 }
 
 
-.icon-push-bold {
+.icon-plug {
   &:before {
     content:"\f164";
   }
@@ -991,7 +994,7 @@ Sep 16, 2015
 }
 
 
-.icon-push {
+.icon-presentation-bold {
   &:before {
     content:"\f165";
   }
@@ -999,7 +1002,7 @@ Sep 16, 2015
 }
 
 
-.icon-question {
+.icon-push-bold {
   &:before {
     content:"\f166";
   }
@@ -1007,7 +1010,7 @@ Sep 16, 2015
 }
 
 
-.icon-radar {
+.icon-push {
   &:before {
     content:"\f167";
   }
@@ -1015,7 +1018,7 @@ Sep 16, 2015
 }
 
 
-.icon-refresh {
+.icon-question {
   &:before {
     content:"\f168";
   }
@@ -1023,7 +1026,7 @@ Sep 16, 2015
 }
 
 
-.icon-rewind {
+.icon-radar {
   &:before {
     content:"\f169";
   }
@@ -1031,7 +1034,7 @@ Sep 16, 2015
 }
 
 
-.icon-rss {
+.icon-refresh {
   &:before {
     content:"\f16a";
   }
@@ -1039,7 +1042,7 @@ Sep 16, 2015
 }
 
 
-.icon-satellite {
+.icon-rewind {
   &:before {
     content:"\f16b";
   }
@@ -1047,7 +1050,7 @@ Sep 16, 2015
 }
 
 
-.icon-schema-free {
+.icon-rss {
   &:before {
     content:"\f16c";
   }
@@ -1055,7 +1058,7 @@ Sep 16, 2015
 }
 
 
-.icon-search-bold {
+.icon-satellite {
   &:before {
     content:"\f16d";
   }
@@ -1063,7 +1066,7 @@ Sep 16, 2015
 }
 
 
-.icon-search {
+.icon-schema-free {
   &:before {
     content:"\f16e";
   }
@@ -1071,7 +1074,7 @@ Sep 16, 2015
 }
 
 
-.icon-server-rack-bold {
+.icon-search-bold {
   &:before {
     content:"\f16f";
   }
@@ -1079,7 +1082,7 @@ Sep 16, 2015
 }
 
 
-.icon-share-bold {
+.icon-search {
   &:before {
     content:"\f170";
   }
@@ -1087,7 +1090,7 @@ Sep 16, 2015
 }
 
 
-.icon-share {
+.icon-server-rack-bold {
   &:before {
     content:"\f171";
   }
@@ -1095,7 +1098,7 @@ Sep 16, 2015
 }
 
 
-.icon-signpost {
+.icon-share-bold {
   &:before {
     content:"\f172";
   }
@@ -1103,7 +1106,7 @@ Sep 16, 2015
 }
 
 
-.icon-slider-alt {
+.icon-share {
   &:before {
     content:"\f173";
   }
@@ -1111,7 +1114,7 @@ Sep 16, 2015
 }
 
 
-.icon-slider-nav-left {
+.icon-signpost {
   &:before {
     content:"\f174";
   }
@@ -1119,7 +1122,7 @@ Sep 16, 2015
 }
 
 
-.icon-slider-nav-right {
+.icon-slider-alt {
   &:before {
     content:"\f175";
   }
@@ -1127,7 +1130,7 @@ Sep 16, 2015
 }
 
 
-.icon-slider {
+.icon-slider-nav-left {
   &:before {
     content:"\f176";
   }
@@ -1135,7 +1138,7 @@ Sep 16, 2015
 }
 
 
-.icon-smile-bold {
+.icon-slider-nav-right {
   &:before {
     content:"\f177";
   }
@@ -1143,7 +1146,7 @@ Sep 16, 2015
 }
 
 
-.icon-smile {
+.icon-slider {
   &:before {
     content:"\f178";
   }
@@ -1151,7 +1154,7 @@ Sep 16, 2015
 }
 
 
-.icon-sms {
+.icon-smile-bold {
   &:before {
     content:"\f179";
   }
@@ -1159,7 +1162,7 @@ Sep 16, 2015
 }
 
 
-.icon-stopwatch {
+.icon-smile {
   &:before {
     content:"\f17a";
   }
@@ -1167,7 +1170,7 @@ Sep 16, 2015
 }
 
 
-.icon-target {
+.icon-sms {
   &:before {
     content:"\f17b";
   }
@@ -1175,7 +1178,7 @@ Sep 16, 2015
 }
 
 
-.icon-team {
+.icon-stopwatch {
   &:before {
     content:"\f17c";
   }
@@ -1183,7 +1186,7 @@ Sep 16, 2015
 }
 
 
-.icon-timer {
+.icon-target {
   &:before {
     content:"\f17d";
   }
@@ -1191,7 +1194,7 @@ Sep 16, 2015
 }
 
 
-.icon-trash {
+.icon-team-bold {
   &:before {
     content:"\f17e";
   }
@@ -1199,7 +1202,7 @@ Sep 16, 2015
 }
 
 
-.icon-twitter {
+.icon-team {
   &:before {
     content:"\f17f";
   }
@@ -1207,7 +1210,7 @@ Sep 16, 2015
 }
 
 
-.icon-user {
+.icon-timer {
   &:before {
     content:"\f180";
   }
@@ -1215,7 +1218,7 @@ Sep 16, 2015
 }
 
 
-.icon-users-bold {
+.icon-trash {
   &:before {
     content:"\f181";
   }
@@ -1223,7 +1226,7 @@ Sep 16, 2015
 }
 
 
-.icon-users {
+.icon-twitter {
   &:before {
     content:"\f182";
   }
@@ -1231,7 +1234,7 @@ Sep 16, 2015
 }
 
 
-.icon-wandoujia {
+.icon-user {
   &:before {
     content:"\f183";
   }
@@ -1239,7 +1242,7 @@ Sep 16, 2015
 }
 
 
-.icon-wechat-alt {
+.icon-users-bold {
   &:before {
     content:"\f184";
   }
@@ -1247,7 +1250,7 @@ Sep 16, 2015
 }
 
 
-.icon-weibo {
+.icon-users {
   &:before {
     content:"\f185";
   }
@@ -1255,7 +1258,7 @@ Sep 16, 2015
 }
 
 
-.icon-window {
+.icon-wandoujia {
   &:before {
     content:"\f186";
   }
@@ -1263,7 +1266,7 @@ Sep 16, 2015
 }
 
 
-.icon-wrench {
+.icon-wechat-alt {
   &:before {
     content:"\f187";
   }
@@ -1271,9 +1274,33 @@ Sep 16, 2015
 }
 
 
-.icon-yen-bold {
+.icon-weibo {
   &:before {
     content:"\f188";
+  }
+  
+}
+
+
+.icon-window {
+  &:before {
+    content:"\f189";
+  }
+  
+}
+
+
+.icon-wrench {
+  &:before {
+    content:"\f18a";
+  }
+  
+}
+
+
+.icon-yen-bold {
+  &:before {
+    content:"\f18b";
   }
   
 }
@@ -1344,213 +1371,219 @@ Sep 16, 2015
 
 @icon-compose: "\f11f";
 
-@icon-contact-card: "\f120";
+@icon-console-run: "\f120";
 
-@icon-controller: "\f121";
+@icon-contact-card: "\f121";
 
-@icon-credit-card: "\f122";
+@icon-controller: "\f122";
 
-@icon-crown: "\f123";
+@icon-credit-card: "\f123";
 
-@icon-danger: "\f124";
+@icon-crown: "\f124";
 
-@icon-dashboard: "\f125";
+@icon-danger: "\f125";
 
-@icon-database-bold: "\f126";
+@icon-dashboard: "\f126";
 
-@icon-devices: "\f127";
+@icon-database-bold: "\f127";
 
-@icon-dollars-bold: "\f128";
+@icon-devices: "\f128";
 
-@icon-download: "\f129";
+@icon-dollars-bold: "\f129";
 
-@icon-edit: "\f12a";
+@icon-download: "\f12a";
 
-@icon-envelope-bold: "\f12b";
+@icon-edit: "\f12b";
 
-@icon-envelope: "\f12c";
+@icon-envelope-bold: "\f12c";
 
-@icon-external: "\f12d";
+@icon-envelope: "\f12d";
 
-@icon-factory: "\f12e";
+@icon-external: "\f12e";
 
-@icon-filter: "\f12f";
+@icon-factory: "\f12f";
 
-@icon-gear-bold: "\f130";
+@icon-filter: "\f130";
 
-@icon-gear: "\f131";
+@icon-gear-bold: "\f131";
 
-@icon-gears: "\f132";
+@icon-gear: "\f132";
 
-@icon-github: "\f133";
+@icon-gears: "\f133";
 
-@icon-globe-alt-2: "\f134";
+@icon-github: "\f134";
 
-@icon-globe-alt: "\f135";
+@icon-globe-alt-2: "\f135";
 
-@icon-globe: "\f136";
+@icon-globe-alt: "\f136";
 
-@icon-golf: "\f137";
+@icon-globe: "\f137";
 
-@icon-google-play: "\f138";
+@icon-golf: "\f138";
 
-@icon-graduation: "\f139";
+@icon-google-play: "\f139";
 
-@icon-graph: "\f13a";
+@icon-graduation: "\f13a";
 
-@icon-hammer-bold: "\f13b";
+@icon-graph: "\f13b";
 
-@icon-heartbeat: "\f13c";
+@icon-hammer-bold: "\f13c";
 
-@icon-home-bold: "\f13d";
+@icon-heartbeat: "\f13d";
 
-@icon-home: "\f13e";
+@icon-home-bold: "\f13e";
 
-@icon-id-card: "\f13f";
+@icon-home: "\f13f";
 
-@icon-inbox-empty: "\f140";
+@icon-id-card: "\f140";
 
-@icon-inbox-files-bold: "\f141";
+@icon-inbox-empty: "\f141";
 
-@icon-inbox-files: "\f142";
+@icon-inbox-files-bold: "\f142";
 
-@icon-info: "\f143";
+@icon-inbox-files: "\f143";
 
-@icon-key-bold: "\f144";
+@icon-info: "\f144";
 
-@icon-key: "\f145";
+@icon-key-bold: "\f145";
 
-@icon-keyhole: "\f146";
+@icon-key: "\f146";
 
-@icon-layer-alt: "\f147";
+@icon-keyhole: "\f147";
 
-@icon-layer-bold: "\f148";
+@icon-layer-alt: "\f148";
 
-@icon-lightning: "\f149";
+@icon-layer-bold: "\f149";
 
-@icon-list-selected: "\f14a";
+@icon-lightning: "\f14a";
 
-@icon-list: "\f14b";
+@icon-list-selected: "\f14b";
 
-@icon-location-arrow: "\f14c";
+@icon-list: "\f14c";
 
-@icon-lock: "\f14d";
+@icon-location-arrow: "\f14d";
 
-@icon-locked-on: "\f14e";
+@icon-lock: "\f14e";
 
-@icon-locked: "\f14f";
+@icon-locked-on: "\f14f";
 
-@icon-magic: "\f150";
+@icon-locked: "\f150";
 
-@icon-magnet: "\f151";
+@icon-log: "\f151";
 
-@icon-map-location: "\f152";
+@icon-magic: "\f152";
 
-@icon-megaphone-bold: "\f153";
+@icon-magnet: "\f153";
 
-@icon-mobile: "\f154";
+@icon-map-location: "\f154";
 
-@icon-multi-lang: "\f155";
+@icon-megaphone-bold: "\f155";
 
-@icon-outbound: "\f156";
+@icon-mobile: "\f156";
 
-@icon-package: "\f157";
+@icon-multi-lang: "\f157";
 
-@icon-path: "\f158";
+@icon-outbound: "\f158";
 
-@icon-pen: "\f159";
+@icon-package: "\f159";
 
-@icon-phone-bold: "\f15a";
+@icon-path: "\f15a";
 
-@icon-phone: "\f15b";
+@icon-pen: "\f15b";
 
-@icon-pie-chart: "\f15c";
+@icon-phone-bold: "\f15c";
 
-@icon-piggy-bank: "\f15d";
+@icon-phone: "\f15d";
 
-@icon-plan: "\f15e";
+@icon-pie-chart: "\f15e";
 
-@icon-plane: "\f15f";
+@icon-piggy-bank: "\f15f";
 
-@icon-play-bold: "\f160";
+@icon-plan: "\f160";
 
-@icon-play: "\f161";
+@icon-plane: "\f161";
 
-@icon-plug: "\f162";
+@icon-play-bold: "\f162";
 
-@icon-presentation-bold: "\f163";
+@icon-play: "\f163";
 
-@icon-push-bold: "\f164";
+@icon-plug: "\f164";
 
-@icon-push: "\f165";
+@icon-presentation-bold: "\f165";
 
-@icon-question: "\f166";
+@icon-push-bold: "\f166";
 
-@icon-radar: "\f167";
+@icon-push: "\f167";
 
-@icon-refresh: "\f168";
+@icon-question: "\f168";
 
-@icon-rewind: "\f169";
+@icon-radar: "\f169";
 
-@icon-rss: "\f16a";
+@icon-refresh: "\f16a";
 
-@icon-satellite: "\f16b";
+@icon-rewind: "\f16b";
 
-@icon-schema-free: "\f16c";
+@icon-rss: "\f16c";
 
-@icon-search-bold: "\f16d";
+@icon-satellite: "\f16d";
 
-@icon-search: "\f16e";
+@icon-schema-free: "\f16e";
 
-@icon-server-rack-bold: "\f16f";
+@icon-search-bold: "\f16f";
 
-@icon-share-bold: "\f170";
+@icon-search: "\f170";
 
-@icon-share: "\f171";
+@icon-server-rack-bold: "\f171";
 
-@icon-signpost: "\f172";
+@icon-share-bold: "\f172";
 
-@icon-slider-alt: "\f173";
+@icon-share: "\f173";
 
-@icon-slider-nav-left: "\f174";
+@icon-signpost: "\f174";
 
-@icon-slider-nav-right: "\f175";
+@icon-slider-alt: "\f175";
 
-@icon-slider: "\f176";
+@icon-slider-nav-left: "\f176";
 
-@icon-smile-bold: "\f177";
+@icon-slider-nav-right: "\f177";
 
-@icon-smile: "\f178";
+@icon-slider: "\f178";
 
-@icon-sms: "\f179";
+@icon-smile-bold: "\f179";
 
-@icon-stopwatch: "\f17a";
+@icon-smile: "\f17a";
 
-@icon-target: "\f17b";
+@icon-sms: "\f17b";
 
-@icon-team: "\f17c";
+@icon-stopwatch: "\f17c";
 
-@icon-timer: "\f17d";
+@icon-target: "\f17d";
 
-@icon-trash: "\f17e";
+@icon-team-bold: "\f17e";
 
-@icon-twitter: "\f17f";
+@icon-team: "\f17f";
 
-@icon-user: "\f180";
+@icon-timer: "\f180";
 
-@icon-users-bold: "\f181";
+@icon-trash: "\f181";
 
-@icon-users: "\f182";
+@icon-twitter: "\f182";
 
-@icon-wandoujia: "\f183";
+@icon-user: "\f183";
 
-@icon-wechat-alt: "\f184";
+@icon-users-bold: "\f184";
 
-@icon-weibo: "\f185";
+@icon-users: "\f185";
 
-@icon-window: "\f186";
+@icon-wandoujia: "\f186";
 
-@icon-wrench: "\f187";
+@icon-wechat-alt: "\f187";
 
-@icon-yen-bold: "\f188";
+@icon-weibo: "\f188";
+
+@icon-window: "\f189";
+
+@icon-wrench: "\f18a";
+
+@icon-yen-bold: "\f18b";
 
