--- a/custom/less/plugin-solarized-light.less
+++ b/custom/less/plugin-solarized-light.less
@@ -65,7 +65,7 @@
   }
 }
 
-.copybtn, .playbtn {
+.copybtn, .runbtn {
   -webkit-appearance: none;
   border: 0;
   padding: 3px 6px;
@@ -77,11 +77,6 @@
   line-height: 1;
   text-transform: uppercase;
 
-  &:hover {
-    color: #f9b813;
-    text-decoration: none;
-  }
-
   .icon {
     vertical-align: middle;
   }
@@ -90,6 +85,21 @@
   .input-group-addon & {
     padding: 0;
     font-size: 18px;
+  }
+}
+
+@btn-active-color: #f9b813;
+
+.copybtn {
+  &.zeroclipboard-is-hover {
+    color: @btn-active-color;
+  }
+}
+
+.runbtn {
+  &:hover, &:focus {
+    color: @btn-active-color;
+    text-decoration: none;
   }
 }
 
