--- a/custom/less/theme-leancloud.less
+++ b/custom/less/theme-leancloud.less
@@ -47,6 +47,15 @@
 @code-color: #f5a122;
 @code-bg: #fffaec;
 
+// Navbar links
+@navbar-default-link-color:                #777;
+@navbar-default-link-hover-color:          #333;
+@navbar-default-link-hover-bg:             transparent;
+@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-bg:          transparent;
+
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    @brand-primary;
 //** Global background color for active items (e.g., navs or dropdowns).
@@ -1006,8 +1015,6 @@ hr {
 
 .label {
   font-size: 85%;
-  border: 1px solid;
-  background: transparent;
   font-weight: @font-weight-base;
   padding: .2em .6em .2em;
   border-radius: @border-radius-base;
@@ -1015,6 +1022,8 @@ hr {
 
 .label-variant(@color) {
   color: @color;
+  background-color: fade(@color, 10%);
+  border: 1px solid fade(@color, 30%);
 
   &[href] {
     &:hover,
