--- a/custom/less/ui-notifications.less
+++ b/custom/less/ui-notifications.less
@@ -47,30 +47,58 @@
   background: rgb(255, 179, 191);
 }
 
+#global-notify {
+
+  // Position fix global notifications when:
+  // 1. Users scroll the pages when there's a page offest
+  // 2. Modal is opening
+  &.on,
+  .modal-open & {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+  }
+}
+
 .msg-tip-wrapper {
   display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  z-index: 999999;
-  color: #fff;
-  background-color: fade(@link-color, 90%);
-  background-size: 50px 50px;
-  background-image: linear-gradient(
-    45deg,
-    fade(darken(@link-color, 20%), 10%)  25%,
-    transparent              25%,
-    transparent              50%,
-    fade(darken(@link-color, 20%), 10%)  50%,
-    fade(darken(@link-color, 20%), 10%)  75%,
-    transparent              75%,
-    transparent
-  );
-  animation: barberpole 1s linear infinite;
-  cursor: pointer;
+  position: relative;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, #fff, #f6fdff);
+  box-shadow: 0 2px 4px 0 fade(mix(@link-color, #000, 50%), 10%);
 
+  .msg-tip {
+    color: @link-color;
+    max-width: 100%;
+    padding: 10px @grid-gutter-width;
+    padding-right: (@grid-gutter-width * 2);
+
+    @media (max-width: @screen-xs-max) {
+      padding-left: (@grid-gutter-width / 2);
+      padding-right: (@grid-gutter-width / 1);
+    }
+
+    a {
+      font-weight: bold;
+    }
+  }
+
+  .msg-tip-close {
+    @s: 24px;
+    position: absolute;
+    top: 5px;
+    right: @grid-gutter-width;
+    display: block;
+    height: @s;
+    width: @s;
+    cursor: pointer;
+    font-size: @s;
+    line-height: 1;
+    text-align: center;
+  }
+
+  // animated border
   @keyframes barberpole {
     from {
       background-position: 0 0;
@@ -80,41 +108,45 @@
     }
   }
 
-  .msg-tip {
-    line-height: (@navbar-height + 1px);
-    max-width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-
-    a {
-      color: #fff;
-      font-weight: bold;
-    }
-  }
-
-  .msg-tip-close {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    display: block;
-    height: 20px;
-    width: 20px;
-    background: red;
+  .msg-tip-deco {
+    width: 100%;
+    height: 1px;
+    background-color: fade(@link-color, 50%);
+    background-size: 50px 50px;
+    background-image: linear-gradient(
+      45deg,
+      fade(darken(@link-color, 20%), 10%)  25%,
+      transparent              25%,
+      transparent              50%,
+      fade(darken(@link-color, 20%), 10%)  50%,
+      fade(darken(@link-color, 20%), 10%)  75%,
+      transparent              75%,
+      transparent
+    );
+    animation: barberpole 1s linear infinite;
     cursor: pointer;
   }
 
   &.error {
-    background-color: fade(#eb192d, 90%);
-    background-image: linear-gradient(
-      45deg,
-      fade(darken(#eb192d, 20%), 10%)  25%,
-      transparent              25%,
-      transparent              50%,
-      fade(darken(#eb192d, 20%), 10%)  50%,
-      fade(darken(#eb192d, 20%), 10%)  75%,
-      transparent              75%,
-      transparent
-    );
+    background: linear-gradient(to bottom, #fff, #fffdfc);
+    box-shadow: 0 1px 6px 0 fade(mix(@brand-danger, #000, 50%), 10%);
+
+    .msg-tip {
+      color: @brand-danger;
+    }
+
+    .msg-tip-deco {
+      background-color: fade(@brand-danger, 50%);
+      background-image: linear-gradient(
+        45deg,
+        fade(darken(#eb192d, 20%), 10%)  25%,
+        transparent              25%,
+        transparent              50%,
+        fade(darken(#eb192d, 20%), 10%)  50%,
+        fade(darken(#eb192d, 20%), 10%)  75%,
+        transparent              75%,
+        transparent
+      );
+    }
   }
 }
