--- a/custom/less/ui-switch.less
+++ b/custom/less/ui-switch.less
@@ -23,7 +23,11 @@
   margin-top: -3px;
   background-color: white;
   border-radius: 18px;
-  box-sizing: content-box;
+  // TODO: this simplfy fixes wrong box behavior in Firefox
+  // Ref: https://github.com/leancloud/avfr/issues/381
+  // Date: Oct 14, 2015, 4:29 PM
+  // Author: Tunghsiao Liu
+  box-sizing: content-box !important;
   // box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   // background-image: linear-gradient(to bottom, #eeeeee, white 25px);
