根据达叔建议修改完毕，请达叔确认合并，tks 达叔！

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -25,7 +25,7 @@
 {% block init_with_app_keys %}{% endblock %}
 
 ### LeanCloud 支持的节点
-SDK 的初始化方法默认使用的中国大陆节点。但是随着北美，欧洲，澳洲以及东南亚的开发者数量的增加，我们也在积极拓展各个国家以及地区的业务，目前 LeanCloud 除了中国大陆之外已经上线或者正在计划内的节点如下：
+SDK 的初始化方法默认使用中国大陆节点，但是随着北美、欧洲、澳洲以及东南亚的开发者数量的增加，我们也在积极向海外拓展业务。目前除了中国大陆之外，我们已经上线或者正在计划内的节点有：
 
 * 北美节点（试运行一年，目前已正式上线），主要为北美开发者提供服务
 * 香港节点（正在部署，近期推出），主要为东南亚开发者提供服务
