Add initial values for App vars

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -1,3 +1,6 @@
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
 # LeanCloud {% block language %}{% endblock %} SDK 安装指南
 
 ## 获取 SDK
