--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -1,3 +1,6 @@
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
 # {% block language_version %}{% endblock %} - 权限管理使用指南
 
 
