--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -1,3 +1,6 @@
+{% set appid = '{{appid}}' %}
+{% set appkey = '{{appkey}}' %}
+{% set masterkey = '{{masterkey}}' %}
 {% set service_name = '{{service_name}}' %}
 {% set order_Id = '{{order_Id}}' %}
 {% set guest_name = '{{guest_name}}' %}
