Updated content by users' comments

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -18,7 +18,7 @@
 
 ### 命令行工具
 
-使用命令行工具可以非常方便的部署、发布云引擎项目，查看项目状态，查看日志，甚至支持多应用部署。具体请参考 [命令行工具指南](cloud_code_commandline.html)。
+使用命令行工具可以非常方便地部署和发布云引擎项目，查看项目状态和查看日志，甚至支持多应用部署。具体请参考 [命令行工具指南](cloud_code_commandline.html)。
 
 ## Demo
 
