Apply updates by users' comments

--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -238,7 +238,7 @@ update | 保存一个已经存在并且被修改的对象
 权限对象名 | 含义
 --- | ---
 所有用户 | 任意用户均有权限
-登录用户 | 用户登陆之后，具有权限
+登录用户 | 用户登录之后，具有权限
 指定用户| 可以指定具体的用户（`AVUser`）也可以指定具体的角色（`AVRole`）
 
 ## 最佳实践
