--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -106,7 +106,7 @@
             <li><a href="sms_guide-ios.html">短信验证使用指南</a></li>
             <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
             <li><a href="ios_os_x_faq.html">FAQ</a></li>
-            <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
+            <li><a href="/api-docs/iOS/index.html" target="_blank">iOS SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -119,7 +119,7 @@
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
             <li><a href="sms_guide-android.html">短信验证使用指南</a></li>
             <li><a href="android_faq.html">FAQ</a></li>
-            <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
+            <li><a href="/api-docs/android/doc/index.html" target="_blank">Android SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -132,7 +132,7 @@
             <li><a href="sms_guide-js.html">短信验证使用指南</a></li>
             <li><a href="js_analytics.html">统计分析开发指南</a></li>
             <li><a href="js_faq.html">FAQ</a></li>
-            <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
+            <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -144,7 +144,7 @@
             <li><a href="realtime_guide-dotnet.html">实时通信开发指南</a></li>
             <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
             <li><a href="dotnet_faq.html">FAQ</a></li>
-            <li><a href="api/dotnet/Help/index.html" target="_blank">.NET SDK API</a></li>
+            <li><a href="/api-docs/dotnet/Help/index.html" target="_blank">.NET SDK API</a></li>
           </ul>
         </li>
 
@@ -153,13 +153,13 @@
           <ul class="dropdown-menu">
             <li><a href="python_guide.html">数据存储开发指南</a></li>
             <li><a href="python_faq.html">FAQ</a></li>
-            <li><a href="api/python/leancloud.html" target="_blank">Python SDK API</a></li>
+            <li><a href="/api-docs/python/leancloud.html" target="_blank">Python SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">PHP</a>
           <ul class="dropdown-menu">
-            <li><a href="api/php/" target="_blank">PHP SDK API</a></li>
+            <li><a href="/api-docs/php/" target="_blank">PHP SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
