--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -88,7 +88,7 @@
           <li><a href="sms_guide-ios.html">短信验证使用指南</a></li>
           <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
           <li><a href="ios_os_x_faq.html">FAQ</a></li>
-          <li><a href="api/iOS/index.html" target="_blank">iOS SDK API</a></li>
+          <li><a href="/api-docs/iOS/index.html" target="_blank">iOS SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -105,7 +105,7 @@
           <li><a href="android_statistics.html">统计分析开发指南</a></li>
           <li><a href="sms_guide-android.html">短信验证使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
-          <li><a href="api/android/doc/index.html" target="_blank">Android SDK API</a></li>
+          <li><a href="/api-docs/android/doc/index.html" target="_blank">Android SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -122,7 +122,7 @@
           <li><a href="js_analytics.html">统计分析开发指南</a></li>
           <li><a href="sms_guide-js.html">短信验证使用指南</a></li>
           <li><a href="js_faq.html">FAQ</a></li>
-          <li><a href="api/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
+          <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -143,7 +143,7 @@
           <li><a href="realtime_guide-dotnet.html">实时通信开发指南</a></li>
           <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
           <li><a href="dotnet_faq.html">FAQ</a></li>
-          <li><a href="api/dotnet/Help/index.html">.NET SDK API</a></li>
+          <li><a href="/api-docs/dotnet/Help/index.html">.NET SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -155,7 +155,7 @@
         <ul>
           <li><a href="python_guide.html">数据存储开发指南</a></li>
           <li><a href="python_faq.html">FAQ</a></li>
-          <li><a href="api/python/leancloud.html">Python SDK API</a></li>
+          <li><a href="/api-docs/python/leancloud.html">Python SDK API</a></li>
         </ul>
       </div>
     </div>
