fix(docs): fix typos by users' comments

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -171,7 +171,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 【正确范例一】
 
-<pre ng-non-bindable><code>XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号： XX租房。XX租房APP下载地址：http://example.com/download.html#/app/download</code></pre>
+<pre ng-non-bindable><code>XX房东您好，租客{{guest_name}}（手机号码：{{guest_phone}}）于{{payment_create_time}}向您支付了房租。租金为{{rent_price}}元，房屋地址在{{rent_addr}}。请关注微信公众号： XX租房。XX租房APP下载地址：http://example.com/download.html</code></pre>
 
 〖错误示例一〗
 
