--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -605,7 +605,7 @@ crontab 的基本语法是：
 
 ![image](images/cloud_code_web_setting.png)
 
-上面将应用的二级域名设置为 **myapp**，设置之后，你应该可以马上访问： 
+上面将应用的二级域名设置为 **myapp**，设置之后，你应该可以马上访问：
 
 - http://myapp.avosapps.com
 - http://myapp.avosapps.us
@@ -619,6 +619,8 @@ crontab 的基本语法是：
 #### 主域名
 
 仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的用户，需要自行办理独立域名与应用绑定的相关手续。
+
+**请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**
 
 其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
 
@@ -641,7 +643,7 @@ crontab 的基本语法是：
 其他企业用户，若尚未在国内对其域名进行过备案，可以申请由我们协助来完成备案工作。其流程大致如下：
 
 1. 你提供相应资料，我们来录入。
-2. 我们的备案接入商给你邮寄幕布，进行拍照验证，并将其它资料签字盖章后一起邮寄给备案提供商。
+2. 请携带资料去备案提供商的核验点拍照；如果不方便，备案服务商会安排给你邮寄幕布，进行拍照验证，完成后请将其它资料签字盖章后一起邮寄给备案提供商。
 3. 提交备案到（公司所在地）管局（通信管理局）审核。
 
 <div class="callout callout-info">请注意：国内各地管局对备案的政策有差别，如北京地区对域名后缀有限制，陕西地区需要提交组织机构代码证，山东地区要求服务器必须托管在山东省内（因此我们无法为山东地区用户备案）等。具体请查询当地管局。</div>
@@ -653,13 +655,12 @@ crontab 的基本语法是：
 1. 单位名称、单位通信地址、营业执照号码、营业执照副本扫描件；
 2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ号码；
 3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ号码；
-4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个），还有网站服务内容类别，可在以下列表中选择一项：
-   * 综合门户
-   * 搜索引擎
-   * 单位门户网站
-   * 网络游戏
-   * 网络广告
-5. [绑定独立域名](绑定独立域名) 所需的信息。
+4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个），
+5. 网站服务内容，请在以下列表中选择一项：
+   综合门户，搜索引擎，单位门户网站，网络游戏，网络广告，即时通讯，网上邮局，网络新闻，博客/个人空间，网络广告/信息，网络购物，网上支付，网上银行，网上炒股/股票基金，网络影视，网络图片，网络软件/下载，网上求职，网上交友/婚介，网上房产，网络教育，网站建设，WAP，其它
+6. 网站语言，请在以下列表中选择一项：
+   中文简体，中文繁体，维吾尔语，哈萨克语，柯尔克孜语，蒙古语，藏语，壮语，朝鲜语，彝语，苗语，英语，日语，法语，俄罗斯语，西班牙语，阿拉伯语
+7. [绑定独立域名](绑定独立域名) 所需的信息。
 
 如果企业之前已经备案过其他网站，即备案主体已经存在，此时还应向我们提供备案密码，我们才能完成资料录入工作。
 
@@ -668,15 +669,23 @@ crontab 的基本语法是：
 请提供你的地址，我们的备案接入商来给你邮寄幕布，因为幕布数量的关系，这里可能需要排队。以下资料是需要你准备好邮寄给接入商：
 
 1.  企业营业执照副本复印件，盖公章；
-2.  企业法人身份证复印件，盖公章；
-3.  网站负责人身份证复印件，盖公章（如果和企业法人是同一人的话，此条可忽略）；
-4. 《网站备案信息真实性核验单》在最下面一栏，请网站负责人签字并盖公章。上面主办者名称和域名都需打印出来手写。
+2.  企业法人身份证复印件（正反面复印在一张纸上），盖公章；
+3.  网站负责人身份证复印件（正反面复印在一张纸上），盖公章（如果和企业法人是同一人的话，此条可忽略）；
+4.  [网站备案信息真实性核验单(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)
+5.  [网络安全责任书(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)
+6.  [法人授权书复印件(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)
 
 备案接入商地址：
 
-**地　　址**：北京市东城区和平里东街 15 号航天物资大厦 209 房间<br/>
-**备案专员**：孟南<br/>
-**联系电话**：010-84222290 转 8001、18101125625<br/>
+######北京
+**地　　址**：北京市海淀区中关村SOHO 510室<br/>
+**备案专员**：网站备案部<br/>
+**联系电话**：010-59718403<br/>
+
+######上海
+**地　　址**：上海市杨浦区隆昌路619号城市概念8号楼北区A01<br/>
+**备案专员**：备案组<br/>
+**联系电话**：021-55509888<br/>
 
 ##### 第三步
 
@@ -736,7 +745,7 @@ crontab 的基本语法是：
 
 ## 运行环境区分
 
-云引擎区分「测试环境」和「生产环境」，两个环境虽然使用 [不同的二级域名](#部署到云引擎)，但是使用相同的数据源。代码在测试环境测试通过后，再部署到生产环境是更安全的做法。 
+云引擎区分「测试环境」和「生产环境」，两个环境虽然使用 [不同的二级域名](#部署到云引擎)，但是使用相同的数据源。代码在测试环境测试通过后，再部署到生产环境是更安全的做法。
 
 有些时候你可能需要知道当前云引擎运行在什么环境（开发环境、测试环境或生产环境），从而做不同的处理：
 
