fix(docs): 修正格式

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -655,7 +655,7 @@ crontab 的基本语法是：
 1. 单位名称、单位通信地址、营业执照号码、营业执照副本扫描件；
 2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ号码；
 3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ号码；
-4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个），
+4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个）
 5. 网站服务内容，请在以下列表中选择一项：
    综合门户，搜索引擎，单位门户网站，网络游戏，网络广告，即时通讯，网上邮局，网络新闻，博客/个人空间，网络广告/信息，网络购物，网上支付，网上银行，网上炒股/股票基金，网络影视，网络图片，网络软件/下载，网上求职，网上交友/婚介，网上房产，网络教育，网站建设，WAP，其它
 6. 网站语言，请在以下列表中选择一项：
