fix(doc) 补充核验点地址及其它信息

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -642,7 +642,7 @@ crontab 的基本语法是：
 
 其他企业用户，若尚未在国内对其域名进行过备案，可以申请由我们协助来完成备案工作。其流程大致如下：
 
-1. 你提供相应资料，我们来录入。
+1. 你提供相应资料，我们来录入；完成后提供备案订单号给你，请在联系备案服务商时提供。
 2. 请携带资料去备案提供商的核验点拍照；如果不方便，备案服务商会安排给你邮寄幕布，进行拍照验证，完成后请将其它资料签字盖章后一起邮寄给备案提供商。
 3. 提交备案到（公司所在地）管局（通信管理局）审核。
 
@@ -661,12 +661,13 @@ crontab 的基本语法是：
 6. 网站语言，请在以下列表中选择一项：
    中文简体，中文繁体，维吾尔语，哈萨克语，柯尔克孜语，蒙古语，藏语，壮语，朝鲜语，彝语，苗语，英语，日语，法语，俄罗斯语，西班牙语，阿拉伯语
 7. [绑定独立域名](绑定独立域名) 所需的信息。
+8. 如果需要邮寄幕布，请提供你的地址、电话及联系人名字。
 
 如果企业之前已经备案过其他网站，即备案主体已经存在，此时还应向我们提供备案密码，我们才能完成资料录入工作。
 
 ##### 第二步
 
-请提供你的地址，我们的备案接入商来给你邮寄幕布，因为幕布数量的关系，这里可能需要排队。以下资料是需要你准备好邮寄给接入商：
+请去备案提供商的核验点拍照，或者提供你的地址，我们的备案接入商来给你邮寄幕布，因为幕布数量的关系，这里可能需要排队。以下资料需要准备：
 
 1.  企业营业执照副本复印件，盖公章；
 2.  企业法人身份证复印件（正反面复印在一张纸上），盖公章；
@@ -675,7 +676,16 @@ crontab 的基本语法是：
 5.  [网络安全责任书(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)
 6.  [法人授权书复印件(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)
 
-备案接入商地址：
+备案拍照核验点地址：
+
+* 上海市杨浦区隆昌路619号城市概念创意园区8号楼北区A01室   预约电话：021-65012912
+* 北京市海淀区海淀北二街中关村SOHO B区—510室   预约电话：15901173539
+* 深圳市南山区科技中二路威盛科技大厦602室   预约电话：13794465215
+* 青岛市崂山区松岭路169号蓝色硅谷软件中心202室   预约电话：0532-67788606-8810 / 0532-83842530-8810
+* 广州市天河区科韵路12-1号方圆E时光东座705室   预约电话：020-85269240
+* 成都高新区天府大道香年广场T3-2605   预约电话：028-65292613
+
+备案资料邮寄地址：
 
 ######北京
 **地　　址**：北京市海淀区中关村SOHO 510室<br/>
