feat(homepage): update icons for hero buttons

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -215,9 +215,7 @@ body {
 }
 
 .doc-hero-links {
-  border: 1px solid #eee;
   text-align: center;
-  border-radius: @border-radius-base;
   margin-bottom: 20px;
 }
 
@@ -226,6 +224,7 @@ body {
   color: #000;
   padding: 30px;
   width: 100%;
+  border: 1px solid @gray-lighter;
   border-radius: @border-radius-base;
   font-size: 16px;
   font-weight: 300;
@@ -235,6 +234,7 @@ body {
     color: @link-color;
     background: #fff;
     text-decoration: none;
+    border-color: @brand-primary;
   }
 
   i {
