--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -18,7 +18,7 @@
     <div class="col-sm-3">
       <div class="doc-hero-links">
         <a href="quick-start-guide.html" class="doc-quick-start-btn">
-          <i class="icon icon-bulb"></i>
+          <i class="icon icon-signpost"></i>
           文档阅读指南
         </a>
       </div>
@@ -28,7 +28,7 @@
     <div class="col-sm-3">
       <div class="doc-hero-links">
         <a href="start.html" class="doc-quick-start-btn">
-          <i class="icon icon-package"></i>
+          <i class="icon icon-bulb"></i>
           快速入门
         </a>
       </div>
